@@ -1,6 +1,7 @@
 2009-XX-XX:
     * version 2.2a1pre
-    * add @: mapping
+    * add @: mapping - repeat the last Ex command
+    * add \ mapping - toggle between rendered and source view
 
 2009-05-21:
     * version 2.1
